--- a/templates/anime_downloader_ohli24_search.html
+++ b/templates/anime_downloader_ohli24_search.html
@@ -109,7 +109,7 @@
 
 
         const get_anime_list = (type, page) => {
-            console.log(`type: ${type}, page: ${page}`)
+            // console.log(`type: ${type}, page: ${page}`)
             let url = ''
             let data = {"page": page, "type": type}
 
@@ -142,7 +142,7 @@
                 dataType: "json",
                 success: (ret) => {
                     let current_screen_movie_data = ret
-                    console.log('ret::>', ret)
+                    // console.log('ret::>', ret)
 
                     if (current_screen_movie_data !== '') {
                         if (type === "ing") {
@@ -158,7 +158,7 @@
                             make_screen_movie_list(ret.data, page)
                         }
                         {#div_visible = true#}
-                        {#console.log(div_visible)#}
+                        {#// console.log(div_visible)#}
                     }
                     next_page = page + 1
                 }
@@ -339,12 +339,12 @@
         $("body").on("click", "#btn_search", function (e) {
             e.preventDefault();
             let query = $("#input_search").val();
-            console.log(query);
+            // console.log(query);
             current_cate = "search"
             current_query = query
 
             if ($("#input_search").val() === "") {
-                console.log("search keyword nothing");
+                // console.log("search keyword nothing");
                 return false;
             }
 
@@ -357,7 +357,7 @@
                 contentType: "application/x-www-form-urlencoded; charset=UTF-8",
                 success: function (ret) {
                     if (ret.ret) {
-                        console.log('ret:::', ret)
+                        // console.log('ret:::', ret)
                         make_search_result_list(ret.data, 1);
                         next_page = page + 1
                     } else {
@@ -370,21 +370,21 @@
         });
 
         $('#anime_category #ing').on("click", function () {
-            // {#console.log(this.id)#}
+            // {#// console.log(this.id)#}
             // let spinner = document.getElementById('spinner');
             // spinner.style.visibility = 'visible';
             get_anime_list("ing", 1)
         })
 
         $('#anime_category #complete_anilist').on("click", function () {
-            // {#console.log(this.id)#}
+            // {#// console.log(this.id)#}
             // let spinner = document.getElementById('spinner');
             // spinner.style.visibility = 'visible';
             get_anime_list("fin", 1)
         })
 
         $('#anime_category #theater').on("click", function () {
-            // {#console.log(this.id)#}
+            // {#// console.log(this.id)#}
             // let spinner = document.getElementById('spinner');
             // spinner.style.visibility = 'visible';
             get_anime_list("theater", 1)
@@ -394,7 +394,7 @@
         $("body").on('click', '#analysis_btn', function (e) {
             e.preventDefault();
             const code = document.getElementById("code").value
-            console.log(code)
+            // console.log(code)
             $.ajax({
                 url: '/' + package_name + '/ajax/' + sub + '/analysis',
                 type: "POST",
@@ -403,8 +403,8 @@
                 dataType: "json",
                 success: function (ret) {
                     if (ret.ret === 'success' && ret.data != null) {
-                        // console.log(ret.code)
-                        console.log(ret.data)
+                        // // console.log(ret.code)
+                        // console.log(ret.data)
                         make_program(ret.data)
                     } else {
                         $.notify('<strong>분석 실패</strong><br>' + ret.log, {type: 'warning'});
@@ -422,7 +422,7 @@
         $("body").on("click", "#add_whitelist", function (e) {
             e.preventDefault();
             let data_code = $(this).attr("data-code");
-            console.log(data_code);
+            // console.log(data_code);
             $.ajax({
                 url: "/" + package_name + "/ajax/" + sub + "/add_whitelist",
                 type: "POST",
@@ -458,7 +458,7 @@
         $("body").on('click', '#add_queue_btn', function (e) {
             e.preventDefault();
             data = current_data.episode[$(this).data('idx')];
-            console.log('data:::>', data)
+            // console.log('data:::>', data)
             $.ajax({
                 url: '/' + package_name + '/ajax/' + sub + '/add_queue',
                 type: "POST",
@@ -522,9 +522,9 @@
             })
                 .then((res) => res.json())
                 .then((response) => {
-                    // console.log("Success:", JSON.stringify(response));
+                    // // console.log("Success:", JSON.stringify(response));
                     // {#imagesContainer.appendChild()#}
-                    console.log("return page:::> ", String(response.page));
+                    // console.log("return page:::> ", String(response.page));
                     // {#page = response.page#}
                     if (current_cate === 'search') {
                         make_search_result_list(response.data, response.page);
@@ -544,9 +544,9 @@
             const {scrollTop, scrollHeight, clientHeight} = e.target.scrollingElement;
             if (Math.round(scrollHeight - scrollTop) <= clientHeight) {
                 {#document.getElementById("spinner").style.display = "block";#}
-                console.log("loading");
-                console.log("now page::> ", page);
-                console.log("next_page::> ", String(next_page));
+                // console.log("loading");
+                // console.log("now page::> ", page);
+                // console.log("next_page::> ", String(next_page));
                 loadNextAnimes(current_cate, next_page);
             }
         };
